--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
    <header id="site-header" class="fixed-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light stroke">
-            <h1><a class="navbar-brand" href="index.html">
+            <h1><a class="navbar-brand" href="#">
                     Bitcoin <span class="sub-color">World</span>
                 </a></h1>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +82,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-5">
                 <div class="grids3-info">
-                    <a href="/trust" class="d-block zoom"><img src="{% static 'images/trust.png' %}" alt="" class="img-fluid radius-image"></a>
+                    <a href="/trustwallet" class="d-block zoom"><img src="{% static 'images/trust.png' %}" alt="" class="img-fluid radius-image"></a>
                     <div class="grids-of-3-saas-info">
                         <h5><a href="#" class="title" style="color:white; margin-top:5px">Trust wallet</a></h5>
                         
@@ -143,7 +143,7 @@
       <div class="grids-of-3 row text-center">
           <div class="col-lg-4 col-md-6 mt-5">
               <div class="grids3-info" style="background-color: #ddd;">
-                  <a href="/argent" class="d-block zoom"><img src="{% static 'images/argent.png' %}" alt="" class="img-fluid radius-image"></a>
+                  <a href="/argentwallet" class="d-block zoom"><img src="{% static 'images/argent.png' %}" alt="" class="img-fluid radius-image"></a>
                   <div class="grids-of-3-saas-info">
                       <h5><a href="#" class="title" style="color:white; margin-top:5px">Argent</a></h5>
                       
@@ -152,7 +152,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mt-5">
               <div class="grids3-info">
-                  <a href="/trust" class="d-block zoom"><img src="{% static 'images/atomic.png' %}" alt="" class="img-fluid radius-image"></a>
+                  <a href="/atomic" class="d-block zoom"><img src="{% static 'images/atomic.png' %}" alt="" class="img-fluid radius-image"></a>
                   <div class="grids-of-3-saas-info">
                       <h5><a href="#" class="title" style="color:white; margin-top:15px">Atomic wallet</a></h5>
                       
@@ -161,7 +161,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mt-5">
               <div class="grids3-info" style="background-color: #ddd;">
-                  <a href="/coinbase" class="d-block zoom"><img src="{% static 'images/atwallet.png' %}" alt="" class="img-fluid radius-image"></a>
+                  <a href="/atwallet" class="d-block zoom"><img src="{% static 'images/atwallet.png' %}" alt="" class="img-fluid radius-image"></a>
                   <div class="grids-of-3-saas-info">
                       <h5><a href="#" class="title" style="color:white; margin-top:5px">Atwallet</a></h5>
                       
@@ -216,7 +216,7 @@
               <div class="w3l-footer-text-style">
                   <div class="footer-list-cont d-sm-flex align-items-center justify-content-between mb-5">
 
-                      <h2 class="w3logo"><a class="navbar-brand" href="index.html">
+                      <h2 class="w3logo"><a class="navbar-brand" href="#">
                               Bitcoin <span class="sub-color">World</span>
                           </a></h2>
                       <div class="main-social-footer-29">
