removed html extension

--- a/templates/alphawallet.html
+++ b/templates/alphawallet.html
@@ -82,7 +82,7 @@
                 <div class="w3l-footer-text-style">
                     <div class="footer-list-cont d-sm-flex align-items-center justify-content-between mb-5">
 
-                        <h2 class="w3logo"><a class="navbar-brand" href="index.html">
+                        <h2 class="w3logo"><a class="navbar-brand" href="#">
                                 Bitcoin <span class="sub-color">World</span>
                             </a></h2>
                         <div class="main-social-footer-29">
