--- a/templates/unstoppable.html
+++ b/templates/unstoppable.html
@@ -18,7 +18,7 @@
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke">
-                <h1><a class="navbar-brand" href="index.html">
+                <h1><a class="navbar-brand" href="#">
                         Bitcoin <span class="sub-color">World</span>
                     </a></h1>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +82,7 @@
                 <div class="w3l-footer-text-style">
                     <div class="footer-list-cont d-sm-flex align-items-center justify-content-between mb-5">
 
-                        <h2 class="w3logo"><a class="navbar-brand" href="index.html">
+                        <h2 class="w3logo"><a class="navbar-brand" href="#">
                                 Bitcoin <span class="sub-color">World</span>
                             </a></h2>
                         <div class="main-social-footer-29">
